--- a/backend/src/index.css
+++ b/backend/src/index.css
@@ -15,3 +15,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.height-800px {
+  height: 800px;
+}
+
+.height-500px {
+  height: 500px;
+}
