--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "react-slideshow-image/dist/styles.css";
 
 body {
   margin: 0;
@@ -28,4 +29,30 @@ code {
 
 .h-100px {
   height: 80px;
+}
+
+.h-400px-w-600px {
+  height: 280px;
+  width: 380px;
+}
+
+.h-30rem-w-50rem {
+  height: 30rem;
+  width: 50rem;
+}
+
+.h-30rem {
+  width: 14rem;
+}
+
+.w-1000px {
+  width: 1000px;
+}
+
+.w-40rem {
+  width: 40rem;
+}
+
+.w-600px {
+  width: 600px;
 }
